videos début MCMC

--- a/content/lectures/06-directsampling.html
+++ b/content/lectures/06-directsampling.html
@@ -1,8 +1,8 @@
 ---
-title: "Direct sampling"
-linktitle: "Direct sampling"
-date: "2020-06-11"
-read_date: "2020-06-11"
+title: "Méthodes d'échantillonnage directes"
+linktitle: "Échantillonnage direct"
+date: "2020-11-30"
+read_date: "2020-12-03"
 menu:
   lectures:
     parent: "III: Calcul numérique pour l'analyse bayésienne"
@@ -19,30 +19,30 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lectures">Video lectures</a><ul>
-<li><a href="#direct-sampling-part-1">Direct sampling part 1</a></li>
-<li><a href="#direct-sampling-part-2">Direct sampling part 2</a></li>
+<li><a href="#leçons-vidéos">Leçons vidéos</a><ul>
+<li><a href="#echantillonnage-direct-partie-1">Echantillonnage direct : partie 1</a></li>
+<li><a href="#echantillonnage-direct-partie-2">Echantillonnage direct : partie 2</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
 </div>
 
-<div id="video-lectures" class="section level2">
-<h2>Video lectures</h2>
-<div id="direct-sampling-part-1" class="section level3">
-<h3>Direct sampling part 1</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UMdlvAtsBuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="leçons-vidéos" class="section level2">
+<h2>Leçons vidéos</h2>
+<div id="echantillonnage-direct-partie-1" class="section level3">
+<h3>Echantillonnage direct : partie 1</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2x2ZUmU9hNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="direct-sampling-part-2" class="section level3">
-<h3>Direct sampling part 2</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/80SDLSI1jpk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="echantillonnage-direct-partie-2" class="section level3">
+<h3>Echantillonnage direct : partie 2</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xlDB8y-Pr8A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCDirectSampling1.pdf">here</a>.</p>
+<div id="diaporamas" class="section level2">
+<h2>Diaporamas</h2>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCDirectSampling1.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesMCMCDirectSampling1.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -50,7 +50,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCDirectSampling2.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la seconde partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCDirectSampling2.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesMCMCDirectSampling2.pdf##view=fit" type="application/pdf" width="420" height="237">
