--- a/content/lectures/_index.html
+++ b/content/lectures/_index.html
@@ -15,4 +15,12 @@ weight: 1
 <h2>Organisation</h2>
 <p>Chacun des 4 chapitres du cours est diviser en plusieurs sections, et pour chaque section, plusieurs capsules vidéos en présente le contenu. À chaque fois, le diaporama présenté est également disponible au format pdf.
 Cliquer les différentes sous-sections afin d’accéder à leur contenu.</p>
+<div id="diaporamas" class="section level3">
+<h3>Diaporamas</h3>
+<ul>
+<li>Le diaporama complet couvrant les chapitres I &amp; II est téléchargeable <a href="/slides/BAYESdia.pdf">ici</a></li>
+<li>Le diaporama complet couvrant le chapitre III sera téléchargeable <a href="">ici</a></li>
+<li>Le diaporama complet couvrant le chapitre IV sera téléchargeable <a href="">ici</a></li>
+</ul>
+</div>
 </div>
