--- a/content/lectures/05-estimateposterior.html
+++ b/content/lectures/05-estimateposterior.html
@@ -1,8 +1,8 @@
 ---
-title: "Estimating the posterior distribution is (often) costly"
-linktitle: "Estimating the posterior distribution is (often) costly"
-date: "2020-06-11"
-read_date: "2020-06-11"
+title: "Une difficile estimation de la distribution a posteriori"
+linktitle: "Une difficile estimation de la distribution a posteriori"
+date: "2020-11-30"
+read_date: "2020-12-03"
 menu:
   lectures:
     parent: "III: Calcul numérique pour l'analyse bayésienne"
@@ -19,42 +19,23 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lectures">Video lectures</a><ul>
-<li><a href="#bayesian-computation-posterior-estimation-part-1">Bayesian computation: posterior estimation part 1</a></li>
-<li><a href="#bayesian-computation-posterior-estimation-part-2">Bayesian computation: posterior estimation part 2</a></li>
-</ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#leçon-vidéo">Leçon vidéo</a></li>
+<li><a href="#diaporama">Diaporama</a></li>
 </ul>
 </div>
 
-<div id="video-lectures" class="section level2">
-<h2>Video lectures</h2>
-<div id="bayesian-computation-posterior-estimation-part-1" class="section level3">
-<h3>Bayesian computation: posterior estimation part 1</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1_uThH_ryBU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="leçon-vidéo" class="section level2">
+<h2>Leçon vidéo</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2cJTX3GbByM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-computation-posterior-estimation-part-2" class="section level3">
-<h3>Bayesian computation: posterior estimation part 2</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/iKkBlSDqiEg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe>
-</div>
-</div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCIntro1.pdf">here</a>.</p>
+<div id="diaporama" class="section level2">
+<h2>Diaporama</h2>
+<p>Le <strong>diaporama</strong> pour cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCIntro.pdf">ici</a>.</p>
 <html>
 <body>
-<object data="/slides/slidesMCMCIntro1.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCIntro1.pdf##view=fit" type="application/pdf"/>
-</object>
-</body>
-</html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCIntro2.pdf">here</a>.</p>
-<html>
-<body>
-<object data="/slides/slidesMCMCIntro2.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCIntro2.pdf##view=fit" type="application/pdf"/>
+<object data="/slides/slidesMCMCIntro.pdf##view=fit" type="application/pdf" width="420" height="237">
+<embed src="/slides/slidesMCMCIntro.pdf##view=fit" type="application/pdf"/>
 </object>
 </body>
 </html>
