--- a/content/lectures/03-bayesinference.html
+++ b/content/lectures/03-bayesinference.html
@@ -61,7 +61,7 @@ output:
 </div>
 <div id="diaporamas" class="section level2">
 <h2>Diaporamas</h2>
-<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesInference.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesInference.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesInference.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -69,7 +69,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesMAP.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMAP.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesMAP.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -77,7 +77,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesEAP">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la troisième partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesEAP">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesEAP##view=fit" type="application/pdf" width="420" height="237">
@@ -85,7 +85,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesUncertainty.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesUncertainty.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesUncertainty.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -93,7 +93,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesAsymptotics.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesAsymptotics.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesAsymptotics.pdf##view=fit" type="application/pdf" width="420" height="237">
