--- a/content/cours/12-algosMCMC.html
+++ b/content/cours/12-algosMCMC.html
@@ -29,7 +29,7 @@ output:
 <h3>Chaînes de Markov</h3>
 <p>Une chaîne de Markov est un processus stochastique à temps discret. On peut la définir comme une suite de variables aléatoires <span class="math inline">\(X_0\)</span>, <span class="math inline">\(X_1\)</span>, <span class="math inline">\(X_2\)</span>, <span class="math inline">\(X_3\)</span>, … (toutes définies sur le même espace) possédant la <strong>propriété de Markov</strong> (“sans mémoire”) :
 <span class="math display">\[p(X_i = x | X_0 = x_0, X_1 = x_1, \dots , X_{i-1} = x_{i-1}) = p(X_i = x |X_{i-1} = x_{i-1})\]</span>
-L’ensemble des valeurs possible pour <span class="math inline">\(X_i\)</span> est appelé **espace d’état* et est noté <span class="math inline">\(E\)</span>.</p>
+L’ensemble des valeurs possible pour <span class="math inline">\(X_i\)</span> est appelé <strong>espace d’état</strong> et est noté <span class="math inline">\(E\)</span>.</p>
 <p>Une chaîne de Markov est déterminée par deux paramètres :</p>
 <ol style="list-style-type: decimal">
 <li>sa distribution initiale <span class="math inline">\(p(X_0)\)</span></li>
