--- a/content/lectures/07-mcmcalgos.html
+++ b/content/lectures/07-mcmcalgos.html
@@ -1,6 +1,6 @@
 ---
-title: "MCMC algorithms"
-linktitle: "MCMC algorithms"
+title: "Algorithmes MCMC"
+linktitle: "Algorithmes MCMC"
 date: "2020-06-18"
 read_date: "2020-06-18"
 menu:
@@ -19,20 +19,20 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lectures">Video lectures</a><ul>
+<li><a href="#leçons-vidéos">Leçons vidéos</a><ul>
 <li><a href="#markov-chains">Markov chains</a></li>
 <li><a href="#monte-carlo-markov-chain-mcmc-algorithms">Monte Carlo Markov Chain (MCMC) algorithms</a></li>
 <li><a href="#metropolis-hastings-algorithm-gibbs-sampler">Metropolis-Hastings algorithm &amp; Gibbs sampler</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
 </div>
 
-<div id="video-lectures" class="section level2">
-<h2>Video lectures</h2>
+<div id="leçons-vidéos" class="section level2">
+<h2>Leçons vidéos</h2>
 <div id="markov-chains" class="section level3">
 <h3>Markov chains</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ghyhUUqPKW8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YrN85dfVY1w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 <div id="monte-carlo-markov-chain-mcmc-algorithms" class="section level3">
@@ -46,9 +46,9 @@ output:
 </iframe>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCMarkovChains.pdf">here</a>.</p>
+<div id="diaporamas" class="section level2">
+<h2>Diaporamas</h2>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCMarkovChains.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesMCMCMarkovChains.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -56,19 +56,11 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCgeneral.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la seconde partie de cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCAlgos.pdf">ici</a>.</p>
 <html>
 <body>
-<object data="/slides/slidesMCMCgeneral.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCgeneral.pdf##view=fit" type="application/pdf"/>
-</object>
-</body>
-</html>
-<p>The <strong>slides</strong> for the third part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCMHGibbs.pdf">here</a>.</p>
-<html>
-<body>
-<object data="/slides/slidesMCMCMHGibbs.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCMHGibbs.pdf##view=fit" type="application/pdf"/>
+<object data="/slides/slidesMCMCAlgos.pdf##view=fit" type="application/pdf" width="420" height="237">
+<embed src="/slides/slidesMCMCAlgos.pdf##view=fit" type="application/pdf"/>
 </object>
 </body>
 </html>
