--- a/content/cours/12-algosMCMC.html
+++ b/content/cours/12-algosMCMC.html
@@ -95,7 +95,7 @@ C &amp; 0.8 &amp; 0 &amp; 0.2\\
 0.044 \\
 0.072 \\
 \end{pmatrix}^T}\]</span></p>
-<p>Ici la loi est apériodique, récurrente et irréductible, il y a donc une loi stationnaire : <span class="math inline">\(\tilde{p}=\tilde{p}P\)</span>.</p>
+<p>Ici la chaîne de Markov est apériodique, récurrente et irréductible, il y a donc une loi stationnaire : <span class="math inline">\(\tilde{p}=\tilde{p}P\)</span>.</p>
 </div>
 <p><br></p>
 </div>
