--- a/content/lectures/07-mcmcalgos.html
+++ b/content/lectures/07-mcmcalgos.html
@@ -20,9 +20,10 @@ output:
 <div id="TOC">
 <ul>
 <li><a href="#leçons-vidéos">Leçons vidéos</a><ul>
-<li><a href="#markov-chains">Markov chains</a></li>
-<li><a href="#monte-carlo-markov-chain-mcmc-algorithms">Monte Carlo Markov Chain (MCMC) algorithms</a></li>
-<li><a href="#metropolis-hastings-algorithm-gibbs-sampler">Metropolis-Hastings algorithm &amp; Gibbs sampler</a></li>
+<li><a href="#chaînes-de-markov-partie-1">Chaînes de Markov partie 1</a></li>
+<li><a href="#chaînes-de-markov-partie-2">Chaînes de Markov partie 2</a></li>
+<li><a href="#algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc">Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC)</a></li>
+<li><a href="#algorithm-de-metropolis-hastings-echantilloneur-de-gibbs">Algorithm de Metropolis-Hastings &amp; Echantilloneur de Gibbs</a></li>
 </ul></li>
 <li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
@@ -30,18 +31,23 @@ output:
 
 <div id="leçons-vidéos" class="section level2">
 <h2>Leçons vidéos</h2>
-<div id="markov-chains" class="section level3">
-<h3>Markov chains</h3>
+<div id="chaînes-de-markov-partie-1" class="section level3">
+<h3>Chaînes de Markov partie 1</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YrN85dfVY1w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="monte-carlo-markov-chain-mcmc-algorithms" class="section level3">
-<h3>Monte Carlo Markov Chain (MCMC) algorithms</h3>
+<div id="chaînes-de-markov-partie-2" class="section level3">
+<h3>Chaînes de Markov partie 2</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PVyD1CBs2KU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</div>
+<div id="algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc" class="section level3">
+<h3>Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC)</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O-pYazQrbH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="metropolis-hastings-algorithm-gibbs-sampler" class="section level3">
-<h3>Metropolis-Hastings algorithm &amp; Gibbs sampler</h3>
+<div id="algorithm-de-metropolis-hastings-echantilloneur-de-gibbs" class="section level3">
+<h3>Algorithm de Metropolis-Hastings &amp; Echantilloneur de Gibbs</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZTxrt08oec0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
