--- a/content/lectures/07-mcmcalgos.html
+++ b/content/lectures/07-mcmcalgos.html
@@ -22,8 +22,7 @@ output:
 <li><a href="#leçons-vidéos">Leçons vidéos</a><ul>
 <li><a href="#chaînes-de-markov-partie-1">Chaînes de Markov partie 1</a></li>
 <li><a href="#chaînes-de-markov-partie-2">Chaînes de Markov partie 2</a></li>
-<li><a href="#algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc">Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC)</a></li>
-<li><a href="#algorithm-de-metropolis-hastings-echantilloneur-de-gibbs">Algorithm de Metropolis-Hastings &amp; Echantilloneur de Gibbs</a></li>
+<li><a href="#algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc-algorithme-de-metropolis-hastings-échantilloneur-de-gibbs">Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC), algorithme de Metropolis-Hastings &amp; échantilloneur de Gibbs</a></li>
 </ul></li>
 <li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
@@ -41,14 +40,9 @@ output:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PVyD1CBs2KU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc" class="section level3">
-<h3>Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC)</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/O-pYazQrbH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe>
-</div>
-<div id="algorithm-de-metropolis-hastings-echantilloneur-de-gibbs" class="section level3">
-<h3>Algorithm de Metropolis-Hastings &amp; Echantilloneur de Gibbs</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZTxrt08oec0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="algorithmes-de-monte-carlo-à-chaîne-de-markov-mcmc-algorithme-de-metropolis-hastings-échantilloneur-de-gibbs" class="section level3">
+<h3>Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC), algorithme de Metropolis-Hastings &amp; échantilloneur de Gibbs</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4vyumvSy_x0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
