--- a/content/lectures/08-mcmcpractice.html
+++ b/content/lectures/08-mcmcpractice.html
@@ -1,6 +1,6 @@
 ---
-title: "MCMC in practice"
-linktitle: "MCMC in practice"
+title: "Les algorithmes MCMC pour l'inférence bayésienne dans la pratique"
+linktitle: "Algorithmes MCMC en pratique"
 date: "2020-06-18"
 read_date: "2020-06-18"
 menu:
@@ -19,56 +19,40 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lectures">Video lectures</a><ul>
-<li><a href="#mcmc-software">MCMC software</a></li>
-<li><a href="#mcmc-convergence">MCMC convergence</a></li>
-<li><a href="#mcmc-inference">MCMC inference</a></li>
+<li><a href="#leçons-video">Leçons video</a><ul>
+<li><a href="#les-logiciels-implémentant-des-algorithmes-mcmc">Les logiciels implémentant des algorithmes MCMC</a></li>
+<li><a href="#diagnostiquer-la-convergence-des-algorithmes-mcmc">Diagnostiquer la convergence des algorithmes MCMC</a></li>
+<li><a href="#inférence">Inférence</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporama">Diaporama</a></li>
 </ul>
 </div>
 
-<div id="video-lectures" class="section level2">
-<h2>Video lectures</h2>
-<div id="mcmc-software" class="section level3">
-<h3>MCMC software</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bbj2MeFyfz8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="leçons-video" class="section level2">
+<h2>Leçons video</h2>
+<div id="les-logiciels-implémentant-des-algorithmes-mcmc" class="section level3">
+<h3>Les logiciels implémentant des algorithmes MCMC</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Aux8mB3K7f0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="mcmc-convergence" class="section level3">
-<h3>MCMC convergence</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/92YmdRIicTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="diagnostiquer-la-convergence-des-algorithmes-mcmc" class="section level3">
+<h3>Diagnostiquer la convergence des algorithmes MCMC</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9KoKYBiKjx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="mcmc-inference" class="section level3">
-<h3>MCMC inference</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Mr3QNpaU2X8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="inférence" class="section level3">
+<h3>Inférence</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Po8As-ONm4s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCsoftware.pdf">here</a>.</p>
+<div id="diaporama" class="section level2">
+<h2>Diaporama</h2>
+<p>Le <strong>diaporama</strong> pour cette section est affiché ci-dessous, et peut être téléchargé <a href="/slides/slidesMCMCsoftware.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesMCMCsoftware.pdf##view=fit" type="application/pdf" width="420" height="237">
 <embed src="/slides/slidesMCMCsoftware.pdf##view=fit" type="application/pdf"/>
-</object>
-</body>
-</html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCconvergence.pdf">here</a>.</p>
-<html>
-<body>
-<object data="/slides/slidesMCMCconvergence.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCconvergence.pdf##view=fit" type="application/pdf"/>
-</object>
-</body>
-</html>
-<p>The <strong>slides</strong> for the third part of this section are displayed below, and can be downloaded <a href="/slides/slidesMCMCinference.pdf">here</a>.</p>
-<html>
-<body>
-<object data="/slides/slidesMCMCinference.pdf##view=fit" type="application/pdf" width="420" height="237">
-<embed src="/slides/slidesMCMCinference.pdf##view=fit" type="application/pdf"/>
 </object>
 </body>
 </html>
