--- a/content/TD/04-exercice4.html
+++ b/content/TD/04-exercice4.html
@@ -17,8 +17,13 @@ bibliography: "../../static/bib/references.bib"
 
 
 
-
-
+<p><strong><em>Propriétés utiles :</em></strong></p>
+<ul>
+<li><p>La densité de probabilité de la
+loi Beta de paramètres <span class="math inline">\(a&gt;0\)</span> et <span class="math inline">\(b&gt;0\)</span> évaluée en <span class="math inline">\(\theta\)</span> est donnée par :
+<span class="math display">\[\text{Beta}(\theta;a,b)=\frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)}\theta^{a-1}(1-\theta)^{b-1}\]</span></p></li>
+<li><p>Soit <span class="math inline">\(\theta\)</span> une variable aléatoire suivant une loi Beta de paramètres <span class="math inline">\(a\)</span> et <span class="math inline">\(b\)</span>. On a alors : <span class="math display">\[\mathbb{E}[\theta]=\frac{a}{a+b}\]</span></p></li>
+</ul>
 <p>On souhaite estimer la probabilité de contracter une maladie <span class="math inline">\(M\)</span> dans
 l’hopital <span class="math inline">\(A\)</span>. On dispose pour cela de données de <span class="math inline">\(n_{A}\)</span> patients indiquant
 s’ils ont ou non contracté la maladie. On note <span class="math inline">\(\boldsymbol{y}^{A} = (y_{1}^{A}, \dots, y_{n_{A}}^{A})\)</span> l’échantillon observé de la variable binaire définie par :
