--- a/content/TD/02-exercice2.html
+++ b/content/TD/02-exercice2.html
@@ -21,7 +21,7 @@ bibliography: "../../static/bib/references.bib"
 où <span class="math inline">\(\lambda&gt;0\)</span> est inconnu et on cherche à l’estimer.</p>
 <p>On rappelle la densité de probabilité pour la distribution exponentielle : <span class="math inline">\(f_\lambda(x) = \lambda e^{-\lambda x}\)</span> pour <span class="math inline">\(x&gt;0\)</span>.</p>
 <p>On utilise comme loi <em>a priori</em> sur <span class="math inline">\(\lambda\)</span> la loi Gamma <span class="math inline">\(\mathcal G(\alpha,\beta)\)</span> dont la densité s’écrit :
-<span class="math display">\[ g(\lambda) = x^{\alpha-1} \frac{\beta^\alpha e^{-\beta x}}{\Gamma(\alpha)}\]</span></p>
+<span class="math display">\[ g(\lambda) = \lambda^{\alpha-1} \frac{\beta^\alpha e^{-\beta \lambda}}{\Gamma(\alpha)}\]</span></p>
 <ol style="list-style-type: decimal">
 <li><p>Écrire est le modèle bayésien associé.</p></li>
 <li><p>Pouvez-vous identifiez la loi <em>a posteriori</em> correspondante ?</p></li>
