--- a/content/TD/02-exercice2.html
+++ b/content/TD/02-exercice2.html
@@ -49,6 +49,7 @@ et donc <span class="math inline">\(\displaystyle f_{\sigma^2}(x_i|\lambda) = \l
   &amp;\propto \lambda^n e^{-\lambda \sum_{i=1}^n x_i} \lambda^{\alpha-1} e^{-\beta \lambda}\\
   &amp;\propto \lambda^{\alpha + n -1} e^{-\left(\beta + \sum_{i=1}^n x_i\right)\lambda}\\
 \end{align*}\]</span></p>
-<p>On reconnait, à une constante (en <span class="math inline">\(\lambda\)</span>) près la forme de la densité d’une loi Gamma de paramètres <span class="math inline">\(\alpha + n\)</span> et <span class="math inline">\(\beta + \sum_{i=1}^n x_i\)</span> : <span class="math inline">\(\mathcal G(\alpha + n, \beta + \sum_{i=1}^n x_i)\)</span>. On remarque que nous sommes dans une situation de conjugaison.</p>
+<p>On reconnaît là, à une constante (en <span class="math inline">\(\lambda\)</span>) près la forme de la densité d’une loi Gamma de paramètres <span class="math inline">\(\alpha + n\)</span> et <span class="math inline">\(\beta + \sum_{i=1}^n x_i\)</span> : <span class="math inline">\(\mathcal G(\alpha + n, \beta + \sum_{i=1}^n x_i)\)</span>.<br />
+On remarque que nous sommes dans une situation de conjugaison.</p>
 </div>
 <p><br></p>
